Updated HT logo image source

--- a/css/ht.css
+++ b/css/ht.css
@@ -101,6 +101,7 @@ input[type='text'], input[type='time'], input[type='url'], input[type='week']{
   }
   .site-logo a{
     display: inline!important;
+    text-decoration: none;
   }
 
   .ht-tagline{
